update & clean up tsconfig

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
   <title>Audio E-commerce</title>
 </head>
 <body>
-  <div>Hello World</div>
-  <script type="module" src="./App.jsx"></script>
-  
+  <div id="root">not render</div>
+  <script type="module" src="./App.tsx"></script>
 </body>
 </html>
